--- a/src/components/InputRange.css
+++ b/src/components/InputRange.css
@@ -7,6 +7,8 @@ input[type="range"] {
   cursor: pointer;
   width: 100%;
 
+  border-radius: 0.5rem;
+  height: 0.5rem;
   /* background: linear-gradient(
     to right,
     hsl(174, 77%, 80%) 0%,
