--- a/src/App.css
+++ b/src/App.css
@@ -15,10 +15,10 @@
 
 body {
   background-color: var(--main-background);
-  background-image: url("./assets/bg-pattern.svg");
+  background-image: url('./assets/bg-pattern.svg');
   background-repeat: no-repeat;
 
-  font-family: "Manrope", sans-serif;
+  font-family: 'Manrope', sans-serif;
   font-optical-sizing: auto;
   /*weight 200-800*/
   color: var(--text);
@@ -28,7 +28,7 @@ main {
   text-align: center;
 }
 header {
-  background-image: url("./assets/pattern-circles.svg");
+  background-image: url('./assets/pattern-circles.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: auto 100%;
@@ -48,7 +48,7 @@ h2 {
   font-weight: 800;
   font-size: 5vw;
 }
-.signup {
+.sign-up {
   font-size: 3.5vw;
   font-weight: 600;
 }
@@ -58,7 +58,7 @@ h2 {
   padding: 36px 7.34% 32px;
   box-shadow: 0 0.1rem 2rem var(--toggle-background);
 }
-.pageviews {
+.page-views {
   text-transform: uppercase;
   font-size: 3.2vw;
   font-weight: 800;
@@ -77,12 +77,12 @@ h1 span {
   font-weight: 600;
   letter-spacing: 1px;
 }
-.billingSpan {
+.billing-span {
   font-size: 3vw;
   font-weight: 600;
 }
 
-.discountSpan {
+.discount-span {
   background-color: var(--discount-background);
   color: var(--discount-text);
   font-size: 3vw;
@@ -90,10 +90,10 @@ h1 span {
   border-radius: 1em;
   padding: 0.2em 0.6em;
 }
-.discoutWord {
+.discount-word {
   display: none;
 }
-.billingDiv {
+.billing-div {
   display: grid;
   grid-template-columns: auto auto auto auto;
   align-items: center;
@@ -101,7 +101,7 @@ h1 span {
   column-gap: 3vw;
 }
 
-.hrline {
+.hr-line {
   margin-left: -8.5%;
   width: 117%;
   height: 1px;
@@ -109,10 +109,10 @@ h1 span {
   margin-bottom: 24px;
   background-color: var(--empty-slider-bar);
 }
-.iconchecked {
+.icon-checked {
   margin-right: 10px;
 }
-.advantagesList {
+.advantages-list {
   font-size: 3vw;
   font-weight: 600;
   letter-spacing: 0.7px;
@@ -152,22 +152,22 @@ button:hover {
     font-size: 2rem;
   }
 
-  .signup {
+  .sign-up {
     display: inline;
     font-size: 1rem;
   }
-  .viewsandpriceDiv {
+  .views-and-price-div {
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto auto;
     align-items: center;
     align-content: center;
   }
-  .inputandviews {
+  .input-and-views {
     grid-row: 2;
     grid-column: 1 / span2;
   }
-  .pageviews {
+  .page-views {
     font-size: 1rem;
     align-self: center;
     justify-self: left;
@@ -178,32 +178,31 @@ button:hover {
     grid-row: 1;
     align-self: center;
     justify-self: end;
-
     margin: 0;
   }
-  .monthORyear {
+  .month-or-year {
     font-size: 1rem;
   }
 
-  .billingDiv {
+  .billing-div {
     column-gap: 1rem;
     justify-content: end;
     margin-top: 16px;
   }
-  .billingSpan {
+  .billing-span {
     font-size: 0.9rem;
   }
-  .discountSpan {
+  .discount-span {
     font-size: 0.8rem;
   }
-  .discoutWord {
+  .discount-word {
     display: initial;
   }
-  .listandbuttonDiv {
+  .list-and-button-div {
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
-  .advantagesList {
+  .advantages-list {
     font-size: 0.8rem;
     text-align: left;
   }
@@ -211,7 +210,6 @@ button:hover {
     font-size: 0.9rem;
     margin-top: 0px;
     padding: 0;
-
     height: 48px;
     width: 180px;
     align-self: center;
