--- a/src/pages/TrialGot.css
+++ b/src/pages/TrialGot.css
@@ -1,4 +1,4 @@
-.trialGotDiv {
+.trial-got-div {
   background-color: var(--pricing-component-background);
   background-image: url(../assets/pattern-circles-light.svg);
   background-repeat: no-repeat;
@@ -7,26 +7,26 @@
   padding: 36px 7.34% 87px;
   box-shadow: 0 0.1rem 2rem var(--toggle-background);
 }
-.signedup {
+.signed-up {
   font-size: 6vw;
   color: var(--text-cta-background);
   margin-top: 64px;
   font-weight: 600;
   line-height: 170%;
 }
-.wearehappy {
+.we-are-happy {
   font-size: 4vw;
   margin-top: 32px;
   margin-bottom: 32px;
 }
 @media only screen and (min-width: 620px) {
-  .trialGotDiv {
+  .trial-got-div {
     padding: 24px 7.34% 64px;
   }
-  .signedup {
+  .signed-up {
     font-size: 2rem;
   }
-  .wearehappy {
+  .we-are-happy {
     font-size: 1.2rem;
   }
 }
